# whisper-app

./: .env.example  README.md  pyproject.toml
src/: audio_transcriber.py  audio_utils.py  furigana_utils.py  reazonspeech_utils.py  transcription_utils.py  vad_utils.py  whisper_utils.py
